2001-07-24  Sam Steingold  <sds@gnu.org>

	Tweak the MAKE-LOAD-FORM patch
	* loadform.lisp: new file; moved `make-load-form',
	`make-load-form-saving-slots' and `make-init-form' here
	* init.lisp: load "loadform"
	* makemake.in (LPARTS): added "loadform"
	* clos.lisp (make-load-form, make-load-form-saving-slots): gone
	* compiler.lisp (*load-forms*): new variable
	(compile-file): bind it

2001-07-18  Arseny Slobodjuck <ampy@crosswinds.net>
	    Sam Steingold  <sds@gnu.org>

	* pathname.d (legal_namechar): PATHNAME_WIN32:
	 permit characters 197 and 206 (legal in CP1251)

2001-07-24  Sam Steingold  <sds@gnu.org>

	* init.lisp (*terminal-encoding*): fixed the export statement spelling

2001-07-23  Sam Steingold  <sds@gnu.org>

	ANSI CL make-load-form implemented
	* clos.lisp (make-load-form, make-load-form-saving-slots): added
	(print-class): removed
	(print-object): print class readably using #.;
	 print standard-objects readably using make-load-form
	(*dynamically-modifiable-generic-function-names*):
	 added make-load-form
	* constsym.d (make_init_form): added
	* init.lisp (make-load-form, make-load-form-saving-slots): export
	(make-init-form): added
	* io.d (pr_instance): when SYS::*COMPILING*, use MAKE-INIT-FORM

2001-07-22  Sam Steingold  <sds@gnu.org>

	Implemented *PRINT-LINES*
	* io.d (pphelp_newline): incf SYS::*PRIN-LINES*
	(check_lines_limit, double_dots): new functions
	(CHECK_LINES_LIMIT): new macro
	(justify_end_eng, justify_end_weit, pr_cons, pr_vector,
	pr_array_recursion, pr_structure_default, pr_record_ab,
	pr_record_rest, pr_record_descr, pr_orecord,
	pr_cclosure_codevector): use it
	(pr_enter): bind SYS::*PRIN-LINES*
	(print_vars_anz): increased to 14
	(write, write-to-string): added :LINES arg
	* constsym.d: added :LINES, *PRINT-LINES* and SYS::*PRIN-LINES*
	* init.lisp: export *PRINT-LINES*
	* inspect.lisp (inspect): bind *PRINT-LINES* to *INSPECT-PRINT-LINES*
	* spvw.d (init_symbol_values): define *PRINT-LINES*
	 and SYS::*PRIN-LINES*